[tool.poetry]
name = "t-export"
version = "0.1.3b7"
description = "Telegram chats export tool."
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Internet",
]
packages = [
    { include = "texport" }
]

[tool.poetry.urls]
Homepage = "https://github.com/RuslanUC/t-export"
Repository = "https://github.com/RuslanUC/t-export"

[tool.poetry.scripts]
texport = "texport.main:main"
t_export = "texport.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
colorama = "^0.4.6"
pyrotgfork = {extras = ["fast"], version = "^2.1.32.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
