[tool.poetry]
name = "t-export"
version = "0.2.0b1"
description = "Telegram chats export tool."
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Internet",
]
packages = [
    { include = "texport" }
]

[tool.poetry.urls]
Homepage = "https://github.com/RuslanUC/t-export"
Repository = "https://github.com/RuslanUC/t-export"

[tool.poetry.scripts]
texport = "texport.main:main"
t_export = "texport.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
colorama = { version = "^0.4.6", markers = "sys_platform == 'win32'" }
pyrotgfork = {extras = ["fast"], version = "^2.2.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
